# Complete_Bank_Statement_Code

./: README.md
backend/: .env.example  pyproject.toml
backend/app/: accurate_processor.py  agent_analyst.py  agent_categorization.py  agentic_rag.py  agents.py  auth_router.py  auth_utils.py  balance_verifier.py  base_agent.py  config.py  data_encryptor.py  data_masker.py  database.py  log_streamer.py  logging_config.py  main.py  models.py  optimized_processor.py  parallel_processor.py  rag_logger.py  rag_pipeline.py  rag_response_formatter.py  smart_extractor.py  table_structure_analyzer.py  table_structure_models.py  vector_store_pinecone.py
backend/app/investment/: __init__.py  auth.py  groww_client.py  mcp_client.py  memory.py  pipeline.py  response_formatter.py  router.py
frontend/: .env.example  COMPONENT_USAGE_GUIDE.md  ENHANCED_FEATURES.md  ERROR_FIXED.md  FIXES_APPLIED.md  FORCE_REBUILD.bat  LAUNCH_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PROFESSIONAL_REDESIGN.md  README.md  REDESIGN_COMPLETE_SUMMARY.md  START_FRONTEND.bat  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  start-frontend.bat  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: EnhancedLayout.jsx  FinancialLayout.jsx  Layout.jsx  LogViewer.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: index.js  useAnimation.js  useCountUp.js  useDebounce.js  useIntersectionObserver.js  useMediaQuery.js
frontend/src/lib/: design-tokens.js
(+59 files in other folders)
